use snake_case for fields in all messages: - to fit the offical style guide for .proto files: https://developers.google.com/protocol-buffers/docs/style?hl=ru
