# pkg/ocp-vacancy-api/ocp-vacancy-api.pb.go
@@ -27,9 +27,9 @@ type VacancyV1 struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	ID     uint64 `protobuf:"varint,1,opt,name=ID,proto3" json:"ID,omitempty"`
-	Link   string `protobuf:"bytes,2,opt,name=Link,proto3" json:"Link,omitempty"`
-	Status uint64 `protobuf:"varint,3,opt,name=Status,proto3" json:"Status,omitempty"`
+	Id     uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Link   string `protobuf:"bytes,2,opt,name=link,proto3" json:"link,omitempty"`
+	Status uint64 `protobuf:"varint,3,opt,name=status,proto3" json:"status,omitempty"`
 }
 
 func (x *VacancyV1) Reset() {
@@ -64,9 +64,9 @@ func (*VacancyV1) Descriptor() ([]byte, []int) {
 	return file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *VacancyV1) GetID() uint64 {
+func (x *VacancyV1) GetId() uint64 {
 	if x != nil {
-		return x.ID
+		return x.Id
 	}
 	return 0
 }
@@ -90,8 +90,8 @@ type CreateVacancyV1Request struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Link   string `protobuf:"bytes,1,opt,name=Link,proto3" json:"Link,omitempty"`
-	Status uint64 `protobuf:"varint,2,opt,name=Status,proto3" json:"Status,omitempty"`
+	Link   string `protobuf:"bytes,1,opt,name=link,proto3" json:"link,omitempty"`
+	Status uint64 `protobuf:"varint,2,opt,name=status,proto3" json:"status,omitempty"`
 }
 
 func (x *CreateVacancyV1Request) Reset() {
@@ -145,7 +145,7 @@ type CreateVacancyV1Response struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	ID uint64 `protobuf:"varint,1,opt,name=ID,proto3" json:"ID,omitempty"`
+	Id uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
 }
 
 func (x *CreateVacancyV1Response) Reset() {
@@ -180,9 +180,9 @@ func (*CreateVacancyV1Response) Descriptor() ([]byte, []int) {
 	return file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDescGZIP(), []int{2}
 }
 
-func (x *CreateVacancyV1Response) GetID() uint64 {
+func (x *CreateVacancyV1Response) GetId() uint64 {
 	if x != nil {
-		return x.ID
+		return x.Id
 	}
 	return 0
 }
@@ -192,7 +192,7 @@ type DescribeVacancyV1Request struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	ID uint64 `protobuf:"varint,1,opt,name=ID,proto3" json:"ID,omitempty"`
+	Id uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
 }
 
 func (x *DescribeVacancyV1Request) Reset() {
@@ -227,9 +227,9 @@ func (*DescribeVacancyV1Request) Descriptor() ([]byte, []int) {
 	return file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDescGZIP(), []int{3}
 }
 
-func (x *DescribeVacancyV1Request) GetID() uint64 {
+func (x *DescribeVacancyV1Request) GetId() uint64 {
 	if x != nil {
-		return x.ID
+		return x.Id
 	}
 	return 0
 }
@@ -239,7 +239,7 @@ type DescribeVacancyV1Response struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Vacancy *VacancyV1 `protobuf:"bytes,1,opt,name=Vacancy,proto3" json:"Vacancy,omitempty"`
+	Vacancy *VacancyV1 `protobuf:"bytes,1,opt,name=vacancy,proto3" json:"vacancy,omitempty"`
 }
 
 func (x *DescribeVacancyV1Response) Reset() {
@@ -286,8 +286,8 @@ type ListVacanciesV1Request struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Limit  uint64 `protobuf:"varint,1,opt,name=Limit,proto3" json:"Limit,omitempty"`
-	Offset uint64 `protobuf:"varint,2,opt,name=Offset,proto3" json:"Offset,omitempty"`
+	Limit  uint64 `protobuf:"varint,1,opt,name=limit,proto3" json:"limit,omitempty"`
+	Offset uint64 `protobuf:"varint,2,opt,name=offset,proto3" json:"offset,omitempty"`
 }
 
 func (x *ListVacanciesV1Request) Reset() {
@@ -341,7 +341,7 @@ type ListVacanciesV1Response struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Vacancies []*VacancyV1 `protobuf:"bytes,1,rep,name=Vacancies,proto3" json:"Vacancies,omitempty"`
+	Vacancies []*VacancyV1 `protobuf:"bytes,1,rep,name=vacancies,proto3" json:"vacancies,omitempty"`
 }
 
 func (x *ListVacanciesV1Response) Reset() {
@@ -388,7 +388,7 @@ type RemoveVacancyV1Request struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	ID uint64 `protobuf:"varint,1,opt,name=ID,proto3" json:"ID,omitempty"`
+	Id uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
 }
 
 func (x *RemoveVacancyV1Request) Reset() {
@@ -423,9 +423,9 @@ func (*RemoveVacancyV1Request) Descriptor() ([]byte, []int) {
 	return file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDescGZIP(), []int{7}
 }
 
-func (x *RemoveVacancyV1Request) GetID() uint64 {
+func (x *RemoveVacancyV1Request) GetId() uint64 {
 	if x != nil {
-		return x.ID
+		return x.Id
 	}
 	return 0
 }
@@ -435,7 +435,7 @@ type RemoveVacancyV1Response struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Found bool `protobuf:"varint,1,opt,name=Found,proto3" json:"Found,omitempty"`
+	Found bool `protobuf:"varint,1,opt,name=found,proto3" json:"found,omitempty"`
 }
 
 func (x *RemoveVacancyV1Response) Reset() {
@@ -490,45 +490,45 @@ var file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDesc = []byte{
 	0x79, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x63, 0x2d, 0x67, 0x65, 0x6e, 0x2d, 0x76, 0x61, 0x6c,
 	0x69, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x76,
 	0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x47, 0x0a,
-	0x09, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x44,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x49, 0x44, 0x12, 0x12, 0x0a, 0x04, 0x4c, 0x69,
-	0x6e, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x4c, 0x69, 0x6e, 0x6b, 0x12, 0x16,
-	0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x03, 0x20, 0x01, 0x28, 0x04, 0x52, 0x06,
-	0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0x57, 0x0a, 0x16, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x09, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6c, 0x69,
+	0x6e, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x12, 0x16,
+	0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x03, 0x20, 0x01, 0x28, 0x04, 0x52, 0x06,
+	0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0x57, 0x0a, 0x16, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
 	0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x12, 0x1c, 0x0a, 0x04, 0x4c, 0x69, 0x6e, 0x6b, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x08,
-	0xfa, 0x42, 0x05, 0x72, 0x03, 0x88, 0x01, 0x01, 0x52, 0x04, 0x4c, 0x69, 0x6e, 0x6b, 0x12, 0x1f,
-	0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07,
-	0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00, 0x52, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22,
+	0x12, 0x1c, 0x0a, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x08,
+	0xfa, 0x42, 0x05, 0x72, 0x03, 0x88, 0x01, 0x01, 0x52, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x12, 0x1f,
+	0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07,
+	0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22,
 	0x29, 0x0a, 0x17, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79,
-	0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x44,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x49, 0x44, 0x22, 0x33, 0x0a, 0x18, 0x44, 0x65,
+	0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x22, 0x33, 0x0a, 0x18, 0x44, 0x65,
 	0x73, 0x63, 0x72, 0x69, 0x62, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x17, 0x0a, 0x02, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00, 0x52, 0x02, 0x49, 0x44, 0x22,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x17, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00, 0x52, 0x02, 0x69, 0x64, 0x22,
 	0x51, 0x0a, 0x19, 0x44, 0x65, 0x73, 0x63, 0x72, 0x69, 0x62, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e,
 	0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x34, 0x0a, 0x07,
-	0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e,
+	0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e,
 	0x6f, 0x63, 0x70, 0x2e, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e,
-	0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x07, 0x56, 0x61, 0x63, 0x61, 0x6e,
+	0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x07, 0x76, 0x61, 0x63, 0x61, 0x6e,
 	0x63, 0x79, 0x22, 0x58, 0x0a, 0x16, 0x4c, 0x69, 0x73, 0x74, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63,
 	0x69, 0x65, 0x73, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1d, 0x0a, 0x05,
-	0x4c, 0x69, 0x6d, 0x69, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04,
-	0x32, 0x02, 0x28, 0x00, 0x52, 0x05, 0x4c, 0x69, 0x6d, 0x69, 0x74, 0x12, 0x1f, 0x0a, 0x06, 0x4f,
+	0x6c, 0x69, 0x6d, 0x69, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04,
+	0x32, 0x02, 0x28, 0x00, 0x52, 0x05, 0x6c, 0x69, 0x6d, 0x69, 0x74, 0x12, 0x1f, 0x0a, 0x06, 0x6f,
 	0x66, 0x66, 0x73, 0x65, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04,
-	0x32, 0x02, 0x28, 0x00, 0x52, 0x06, 0x4f, 0x66, 0x66, 0x73, 0x65, 0x74, 0x22, 0x53, 0x0a, 0x17,
+	0x32, 0x02, 0x28, 0x00, 0x52, 0x06, 0x6f, 0x66, 0x66, 0x73, 0x65, 0x74, 0x22, 0x53, 0x0a, 0x17,
 	0x4c, 0x69, 0x73, 0x74, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65, 0x73, 0x56, 0x31, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x38, 0x0a, 0x09, 0x56, 0x61, 0x63, 0x61, 0x6e,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x38, 0x0a, 0x09, 0x76, 0x61, 0x63, 0x61, 0x6e,
 	0x63, 0x69, 0x65, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x6f, 0x63, 0x70,
 	0x2e, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x56, 0x61, 0x63,
-	0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x09, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65,
+	0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x09, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65,
 	0x73, 0x22, 0x31, 0x0a, 0x16, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e,
-	0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x17, 0x0a, 0x02, 0x49,
-	0x44, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00,
-	0x52, 0x02, 0x49, 0x44, 0x22, 0x2f, 0x0a, 0x17, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x56, 0x61,
+	0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x17, 0x0a, 0x02, 0x69,
+	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x32, 0x02, 0x28, 0x00,
+	0x52, 0x02, 0x69, 0x64, 0x22, 0x2f, 0x0a, 0x17, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x56, 0x61,
 	0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
-	0x14, 0x0a, 0x05, 0x46, 0x6f, 0x75, 0x6e, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x05,
-	0x46, 0x6f, 0x75, 0x6e, 0x64, 0x32, 0x98, 0x04, 0x0a, 0x0d, 0x4f, 0x63, 0x70, 0x56, 0x61, 0x63,
+	0x14, 0x0a, 0x05, 0x66, 0x6f, 0x75, 0x6e, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x05,
+	0x66, 0x6f, 0x75, 0x6e, 0x64, 0x32, 0x98, 0x04, 0x0a, 0x0d, 0x4f, 0x63, 0x70, 0x56, 0x61, 0x63,
 	0x61, 0x6e, 0x63, 0x79, 0x41, 0x70, 0x69, 0x12, 0x7e, 0x0a, 0x0f, 0x43, 0x72, 0x65, 0x61, 0x74,
 	0x65, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x12, 0x27, 0x2e, 0x6f, 0x63, 0x70,
 	0x2e, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x72, 0x65,
@@ -545,7 +545,7 @@ var file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDesc = []byte{
 	0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x44, 0x65, 0x73, 0x63, 0x72,
 	0x69, 0x62, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70,
 	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x76,
-	0x31, 0x2f, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x49, 0x44, 0x7d,
+	0x31, 0x2f, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x69, 0x64, 0x7d,
 	0x12, 0x7b, 0x0a, 0x0f, 0x4c, 0x69, 0x73, 0x74, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65,
 	0x73, 0x56, 0x31, 0x12, 0x27, 0x2e, 0x6f, 0x63, 0x70, 0x2e, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63,
 	0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63,
@@ -561,7 +561,7 @@ var file_api_ocp_vacancy_api_ocp_vacancy_api_proto_rawDesc = []byte{
 	0x2e, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x6d,
 	0x6f, 0x76, 0x65, 0x56, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x79, 0x56, 0x31, 0x52, 0x65, 0x73, 0x70,
 	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x2a, 0x12, 0x2f, 0x76,
-	0x31, 0x2f, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x49, 0x44, 0x7d,
+	0x31, 0x2f, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x69, 0x64, 0x7d,
 	0x42, 0x47, 0x5a, 0x45, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6f,
 	0x7a, 0x6f, 0x6e, 0x63, 0x70, 0x2f, 0x6f, 0x63, 0x70, 0x2d, 0x76, 0x61, 0x63, 0x61, 0x6e, 0x63,
 	0x79, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x6f, 0x63, 0x70, 0x2d, 0x76, 0x61,
@@ -595,8 +595,8 @@ var file_api_ocp_vacancy_api_ocp_vacancy_api_proto_goTypes = []interface{}{
 	(*RemoveVacancyV1Response)(nil),   // 8: ocp.vacancy.api.RemoveVacancyV1Response
 }
 var file_api_ocp_vacancy_api_ocp_vacancy_api_proto_depIdxs = []int32{
-	0, // 0: ocp.vacancy.api.DescribeVacancyV1Response.Vacancy:type_name -> ocp.vacancy.api.VacancyV1
-	0, // 1: ocp.vacancy.api.ListVacanciesV1Response.Vacancies:type_name -> ocp.vacancy.api.VacancyV1
+	0, // 0: ocp.vacancy.api.DescribeVacancyV1Response.vacancy:type_name -> ocp.vacancy.api.VacancyV1
+	0, // 1: ocp.vacancy.api.ListVacanciesV1Response.vacancies:type_name -> ocp.vacancy.api.VacancyV1
 	1, // 2: ocp.vacancy.api.OcpVacancyApi.CreateVacancyV1:input_type -> ocp.vacancy.api.CreateVacancyV1Request
 	3, // 3: ocp.vacancy.api.OcpVacancyApi.DescribeVacancyV1:input_type -> ocp.vacancy.api.DescribeVacancyV1Request
 	5, // 4: ocp.vacancy.api.OcpVacancyApi.ListVacanciesV1:input_type -> ocp.vacancy.api.ListVacanciesV1Request
